-Added initial admin panel support , -Added firebase support -Added routing support -Need to add login authentication -Added important components -Need to add population logic -Need to fix menu issue

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "angular-font-awesome": "^3.1.2",
+    "angularfire2": "^5.2.3",
     "bootstrap": "^4.3.1",
     "express": "^4.15.2",
+    "firebase": "^7.3.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
