--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,14 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
-              "./node_modules/font-awesome/css/font-awesome.css"
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./src/assets/fonts/icomoon/style.css",
+              "./src/assets/css/bootstrap.min.css",
+              "./src/assets/css/magnific-popup.css",
+              "./src/assets/css/bootstrap-datepicker.css",
+              "./src/assets/fonts/flaticon/font/flaticon.css",
+              "./src/assets/css/aos.css",
+              "./src/assets/css/style.css"
             ],
             "scripts": []
           },
