--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/platform-server": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@auth0/angular-jwt": "^3.0.1",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "angular-font-awesome": "^3.1.2",
