--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~8.2.7",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "angular-bootstrap-md": "^8.8.0",
     "angular-font-awesome": "^3.1.2",
     "angularfire2": "^5.2.3",
     "bootstrap": "^4.3.1",
