-Added new images -Added image compress module

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase": "^7.3.0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-image-compress": "^8.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
