--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "./src/assets/css/style.css",
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
-              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss"
+              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/ngx-toastr/toastr-old.css"
             ],
             "scripts": [
             ]
