--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.2.0",
     "ngx-image-compress": "^8.0.3",
+    "ngx-toastr": "^11.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
